# OFei-LCM

./: .gitignore
calibration_verification/: CMakeLists.txt  README.md  debug.sh  param1.cmd  param2.cmd  release.sh
calibration_verification/src/: calibration_verification.cpp  convertedPointCloudPuber.cpp  irProcess.cpp  showErrorPoints.cpp  showGround.cpp  showPointCloud.cpp
calibration_verification/src/planeDetection/: planeDetection.cpp  planeDetection.h
cape_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
cape_ws/devel/lib/cape_ros/: cape_ros
cape_ws/devel/lib/pkgconfig/: cape_ros.pc
cape_ws/devel/share/cape_ros/cmake/: cape_rosConfig.cmake
online-demo/: CMakeLists.txt  DepthMapWrapper.h  arm64_linux_zhuimi.cmake  calibration.c  calibration.h  camerademo.c  camerademo.h  common.c  common.h
online-demo/third/: libdepthcomputation.so.1.8.0
online_demo_lcm/: DepthMapWrapper.h  README.md  calibration.c  camerademo.c  common.h  debug.sh  imagesHandler.cpp  imagesHandler.h  main.cpp  main_lcm.cpp
rk3566-demo-0811/: CMakeLists.txt  README.md  calibration.h  camerademo.c  camerademo.h  common.c  imagesHandler.cpp  main.cpp  main_lcm.cpp
rk3566-demo-0811/third/: libdepthcomputation.so.1.8.0
